# tecnicas-de-construcao-de-programas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml
docker/: Dockerfile
fase_1/: requisitos.md
fase_2/: estudo_de_modularidade.md
fase_3/: codebase.txt  fase_3.md
src/: __main__.py  audio.py  audioGUItemporaria.py  audioPlayerGUITempo.py  audio_.py  audio_playerTempo.py  command_list.py  commands.py  control_board.py  input_error.py  input_validator.py  midi.py  midi_file_processor.py  music_player.py  test_audio.py  test_audio_.py  user_input.py
src/songs/: doremifa.txt  song.txt  teste1.txt  tubular_bells.txt
src/tests/control_board/: test_control_board.py  test_play_pause_button.py  test_restart_button.py
src/tests/input_validator/: test_input_validator.py
src/tests/user_input/: test_input_validator.py  test_user_input.py  test_user_input_widget.py
src/user_input/: __init__.py  input_error.py  input_validator.py  txt_loader.py  user_input.py
