[tool.poetry]
name = "Music Player"
version = "0.1.0"
description = ""
authors = [
    "Matheus Castro <matheuslc36.mc@gmail.com>",
    "Kelvin Brose <ksb_56@hotmail.com>",
    "Vitor Chassot  <vitorchassot759@gmail.com>"
]

[tool.poetry.dependencies]
python = "~3.11"

pyqt6 = "6.7.1"
pygame = "2.6.1"
prettytable = "3.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.5"

pytest = "8.3.2"
pytest-qt = "4.4.0"

ruff = "0.7.4"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
